--- a/LIGA_Language_Identification.ipynb
+++ b/LIGA_Language_Identification.ipynb
@@ -120,7 +120,7 @@
         "outputId": "54829667-c327-4360-d632-1b046c75e19f"
       },
       "source": [
-        "csv_path = './Dataset/lid_dataset.csv'\n",
+        "csv_path = './lid_dataset.csv'\n",
         "dataset = pd.read_csv(csv_path)\n",
         "dataset.columns = ['text','language']\n",
         "dataset.head(10)"
